force-app/main/default/objects/Applicant/Applicant.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>