force-app/main/default/objects/Applicant/fields/Business_City__c.field-meta.xml
<CustomField>
    <fullName>Business_City__c</fullName>
    <label>Business City</label>
    <length>80</length>
    <type>Text</type>
    <description>Business address city. Can be auto-populated from ZIP code.</description>
</CustomField>