force-app/main/default/objects/Applicant/fields/Business_Country__c.field-meta.xml
<CustomField>
    <fullName>Business_Country__c</fullName>
    <label>Business Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
                <default>true</default>
                <label>United States</label>
            </value>
            <value>
                <fullName>CAN</fullName>
                <label>Canada</label>
            </value>
            <value>
                <fullName>MEX</fullName>
                <label>Mexico</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Business address country. Default: USA</description>
</CustomField>