force-app/main/default/objects/Applicant/fields/Business_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Description__c</fullName>
    <label>Business Description</label>
    <type>LongTextArea</type>
    <length>500</length>
    <description>Brief description of business activities. Optional field, max 500 characters.</description>
</CustomField>