force-app/main/default/objects/Applicant/fields/Business_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Email__c</fullName>
    <label>Business Email</label>
    <type>Email</type>
    <description>Primary business email address. Required for contact information.</description>
</CustomField>