force-app/main/default/objects/Applicant/fields/Business_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Home_Phone__c</fullName>
    <description>Secondary business phone number (home line). Optional field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Phone (Home)</label>
    <type>Phone</type>
</CustomField>