force-app/main/default/objects/Applicant/fields/Business_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Mobile_Phone__c</fullName>
    <label>Business Phone (Mobile)</label>
    <type>Phone</type>
    <description>Mobile business phone number. Optional field.</description>
</CustomField>