force-app/main/default/objects/Applicant/fields/Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone__c</fullName>
    <description>Primary business phone number. Required for business profile.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>