force-app/main/default/objects/Applicant/fields/Business_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Postal_Code__c</fullName>
    <description>Business address ZIP code. Format: #####-####</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business ZIP Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>