force-app/main/default/objects/Applicant/fields/Business_Registration_State__c.field-meta.xml
<CustomField>
    <fullName>Business_Registration_State__c</fullName>
    <description>The state where the business entity is registered/incorporated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Registration State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>