force-app/main/default/objects/Applicant/fields/Business_Street_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Business_Street_Line_1__c</fullName>
    <label>Business Address Line 1</label>
    <length>255</length>
    <type>Text</type>
    <description>Business street address line 1. Required for business profile.</description>
</CustomField>