force-app/main/default/objects/Applicant/fields/Business_Street_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Business_Street_Line_2__c</fullName>
    <description>Business street address line 2. Optional for suite, apartment, or unit numbers.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>