force-app/main/default/objects/Applicant/fields/Business_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Tax_ID__c</fullName>
    <label>Business Tax ID (EIN)</label>
    <length>11</length>
    <type>EncryptedText</type>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <description>Employer Identification Number (EIN) for business entities. Encrypted for PII protection. Format: XX-XXXXXXX</description>
</CustomField>