force-app/main/default/objects/Applicant/fields/Business_Website__c.field-meta.xml
<CustomField>
    <fullName>Business_Website__c</fullName>
    <label>Business Website</label>
    <type>Url</type>
    <description>Business website URL. Optional field for contact information.</description>
</CustomField>