force-app/main/default/objects/Applicant/fields/Country_Of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Residence__c</fullName>
    <label>Country Of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>England</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>