force-app/main/default/objects/Applicant/fields/DAOApplicantId__c.field-meta.xml
<CustomField>
    <fullName>DAOApplicantId__c</fullName>
    <description>External ID from  for Applicant. Used for upsert operations and deduplication.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DAO Applicant ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>