force-app/main/default/objects/Applicant/fields/Date_Established__c.field-meta.xml
<CustomField>
    <fullName>Date_Established__c</fullName>
    <description>Date when the business was established. Cannot be a future date. Used for KYC/CIP compliance.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Established</label>
    <type>Date</type>
</CustomField>