force-app/main/default/objects/Applicant/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <description>Doing Business As name for the organization. Alternative business name used for operations.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Doing Business As (DBA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>