force-app/main/default/objects/Applicant/fields/Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>Doing_Business_As__c</fullName>
    <description>The DBA (Doing Business As) name for the business entity</description>
    <label>Doing Business As (DBA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>