force-app/main/default/objects/Applicant/fields/Government_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Government_ID_Number__c</fullName>
    <label>Government ID Number</label>
    <length>50</length>
    <type>EncryptedText</type>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <description>Government-issued ID number. Encrypted for PII protection</description>
</CustomField>