force-app/main/default/objects/Applicant/fields/Government_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Government_ID_Type__c</fullName>
    <label>Government ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver's License</fullName>
                <default>true</default>
                <label>Driver's License</label>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>State ID</fullName>
            </value>
            <value>
                <fullName>Military ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of government-issued identification</description>
</CustomField>