force-app/main/default/objects/Applicant/fields/Has_Phonetic_Name__c.field-meta.xml
<CustomField>
    <fullName>Has_Phonetic_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Phonetic Name</label>
    <type>Checkbox</type>
    <description>Indicates if phonetic spelling exists for the applicant's name</description>
</CustomField>