force-app/main/default/objects/Applicant/fields/ID_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>ID_Expiration_Date__c</fullName>
    <label>ID Expiration Date</label>
    <type>Date</type>
    <description>Date the government ID expires. Must be after Issue Date</description>
</CustomField>