force-app/main/default/objects/Applicant/fields/ID_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>ID_Issue_Date__c</fullName>
    <description>Date the government ID was issued. Cannot be a future date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Issue Date</label>
    <type>Date</type>
</CustomField>