force-app/main/default/objects/Applicant/fields/ID_Issuing_Country__c.field-meta.xml
<CustomField>
    <fullName>ID_Issuing_Country__c</fullName>
    <label>ID Issuing Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
                <default>true</default>
                <label>USA</label>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Country that issued the government ID. Default: USA</description>
</CustomField>