force-app/main/default/objects/Applicant/fields/ID_Issuing_State__c.field-meta.xml
<CustomField>
    <fullName>ID_Issuing_State__c</fullName>
    <description>State that issued the government ID. Conditional on Country=USA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Issuing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>