force-app/main/default/objects/Applicant/fields/Is_Control_Person__c.field-meta.xml
<CustomField>
    <fullName>Is_Control_Person__c</fullName>
    <label>Is Control Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>