force-app/main/default/objects/Applicant/fields/Is_US_Resident__c.field-meta.xml
<CustomField>
    <fullName>Is_US_Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is US Resident</label>
    <type>Checkbox</type>
</CustomField>