force-app/main/default/objects/Applicant/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <label>Mailing City</label>
    <length>80</length>
    <type>Text</type>
    <description>Mailing address city. Can be auto-populated from ZIP code</description>
</CustomField>