force-app/main/default/objects/Applicant/fields/Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Postal_Code__c</fullName>
    <label>Mailing ZIP Code</label>
    <length>10</length>
    <type>Text</type>
    <description>Mailing address ZIP code. Format: #####-####</description>
</CustomField>