force-app/main/default/objects/Applicant/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <description>Mailing address state. US States + Territories</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>