force-app/main/default/objects/Applicant/fields/Mailing_Street_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_Line_1__c</fullName>
    <label>Mailing Street Line 1</label>
    <length>255</length>
    <type>Text</type>
    <description>First line of mailing street address</description>
</CustomField>