force-app/main/default/objects/Applicant/fields/Mailing_Street_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_Line_2__c</fullName>
    <label>Mailing Street Line 2</label>
    <length>255</length>
    <type>Text</type>
    <description>Second line of mailing street address (optional)</description>
</CustomField>