force-app/main/default/objects/Applicant/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
    <description>Applicant's mobile phone number</description>
</CustomField>