force-app/main/default/objects/Applicant/fields/Mothers_Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>Mothers_Maiden_Name__c</fullName>
    <description>Mother&apos;s maiden name - used as security question. Encrypted for PII protection</description>
    <label>Mother&apos;s Maiden Name</label>
    <length>80</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>