force-app/main/default/objects/Applicant/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <label>NAICS Code</label>
    <type>Lookup</type>
    <referenceTo>NAICS__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>North American Industry Classification System code. Required for CIP/KYC compliance. Lookup to NAICS custom object.</description>
</CustomField>