force-app/main/default/objects/Applicant/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <label>Nickname</label>
    <length>80</length>
    <type>Text</type>
    <description>Preferred nickname for the applicant</description>
</CustomField>