force-app/main/default/objects/Applicant/fields/Organization_Role__c.field-meta.xml
<CustomField>
    <fullName>Organization_Role__c</fullName>
    <label>Organization Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Owner</fullName>
            </value>
            <value>
                <fullName>Authorized Signer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>