force-app/main/default/objects/Applicant/fields/Phonetic_Name__c.field-meta.xml
<CustomField>
    <fullName>Phonetic_Name__c</fullName>
    <description>Phonetic spelling of the applicant&apos;s name. Displays when Has Phonetic Name checkbox is true</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phonetic Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>