force-app/main/default/objects/Applicant/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <description>Name of the primary contact person for the business. Optional manual entry field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>