force-app/main/default/objects/Applicant/fields/Primary_Contact_PersonAccount__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_PersonAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to an existing PersonAccount selected as the Primary Contact for this business application</description>
    <label>Primary Contact (PersonAccount)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Applications (Primary Contact)</relationshipLabel>
    <relationshipName>Business_Applications_Primary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>