force-app/main/default/objects/Applicant/fields/Primary_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Title__c</fullName>
    <label>Primary Contact Title</label>
    <length>100</length>
    <type>Text</type>
    <description>Job title of the primary contact person for the business. Optional manual entry field.</description>
</CustomField>