force-app/main/default/objects/Applicant/fields/State_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>State_of_Incorporation__c</fullName>
    <description>State where the business is incorporated or registered</description>
    <label>State of Incorporation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AL</fullName>
                <label>Alabama</label>
            </value>
            <value>
                <fullName>AK</fullName>
                <label>Alaska</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>Arizona</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Arkansas</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>California</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Colorado</label>
            </value>
            <value>
                <fullName>CT</fullName>
                <label>Connecticut</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>Delaware</label>
            </value>
            <value>
                <fullName>FL</fullName>
                <label>Florida</label>
            </value>
            <value>
                <fullName>GA</fullName>
                <label>Georgia</label>
            </value>
            <value>
                <fullName>HI</fullName>
                <label>Hawaii</label>
            </value>
            <value>
                <fullName>ID</fullName>
                <label>Idaho</label>
            </value>
            <value>
                <fullName>IL</fullName>
                <label>Illinois</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>Indiana</label>
            </value>
            <value>
                <fullName>IA</fullName>
                <label>Iowa</label>
            </value>
            <value>
                <fullName>KS</fullName>
                <label>Kansas</label>
            </value>
            <value>
                <fullName>KY</fullName>
                <label>Kentucky</label>
            </value>
            <value>
                <fullName>LA</fullName>
                <label>Louisiana</label>
            </value>
            <value>
                <fullName>ME</fullName>
                <label>Maine</label>
            </value>
            <value>
                <fullName>MD</fullName>
                <label>Maryland</label>
            </value>
            <value>
                <fullName>MA</fullName>
                <label>Massachusetts</label>
            </value>
            <value>
                <fullName>MI</fullName>
                <label>Michigan</label>
            </value>
            <value>
                <fullName>MN</fullName>
                <label>Minnesota</label>
            </value>
            <value>
                <fullName>MS</fullName>
                <label>Mississippi</label>
            </value>
            <value>
                <fullName>MO</fullName>
                <label>Missouri</label>
            </value>
            <value>
                <fullName>MT</fullName>
                <label>Montana</label>
            </value>
            <value>
                <fullName>NE</fullName>
                <label>Nebraska</label>
            </value>
            <value>
                <fullName>NV</fullName>
                <label>Nevada</label>
            </value>
            <value>
                <fullName>NH</fullName>
                <label>New Hampshire</label>
            </value>
            <value>
                <fullName>NJ</fullName>
                <label>New Jersey</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>